--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "contributors": [
     "Astrism <astrisms@gmail.com>",
     "Kent C. Dodds <kent@doddsfamily.us>",
-    "Mike Hartington <mikehartington@gmail.com>"
+    "Mike Hartington <mikehartington@gmail.com>",
+    "Charles Jacquin <charles.jacquin@ambient-it.net>"
   ],
   "homepage": "http://formly-js.github.io/angular-formly-templates-ionic/",
   "repository": {
@@ -19,34 +20,54 @@
       "url": "https://raw.githubusercontent.com/formly-js/angular-formly-templates-ionic/master/LICENSE"
     }
   ],
+  "config": {
+    "commitizen": {
+      "path": "node_modules/cz-conventional-changelog"
+    },
+    "ghooks": {
+      "commit-msg": "./node_modules/.bin/validate-commit-msg"
+    }
+  },
   "scripts": {
-    "build": "./node_modules/.bin/grunt build"
+    "dev": "webpack --progress --colors --watch --set-env-NODE_ENV=development",
+    "build:dev": "webpack --progress --colors --set-env-NODE_ENV=development",
+    "build:prod": "webpack --progress --colors --set-env-NODE_ENV=production",
+    "build": "npm run build:dev; npm run build:prod",
+    "commit": "git-cz"
   },
-  "description": "Angular-Formly plugin which outputs plain html form fields.",
+  "description": "Angular-Formly plugin which outputs ionic compatible form fields.",
   "peerDependencies": {
-    "angular": "^1.x",
-    "angular-formly": ">=3.0.0",
+    "angular": "^1.2.x || >= 1.4.0-beta.0 || >= 1.5.0-beta.0",
+    "angular-formly": ">=6.20.0",
     "api-check": ">=7.5.0",
-    "ionic-sdk": "^1.0.0"
-  },
-  "dependencies": {
-    "angular": "^1.x",
-    "angular-formly": ">=3.0.0",
-    "api-check": ">=7.5.0",
-    "ionic-sdk": "^1.0.0"
+    "ionic-sdk": "^1.2.0",
+    "angular-messages": "^1.4.8"
   },
   "devDependencies": {
-    "bower": "^1.3.3",
-    "gulp": "^3.5.6",
-    "gulp-bump": "^0.3.0",
-    "gulp-concat": "^2.2.0",
-    "gulp-filter": "^2.0.2",
-    "gulp-git": "^1.1.0",
-    "gulp-minify-html": "^1.0.2",
-    "gulp-ng-annotate": "^0.5.2",
-    "gulp-ng-templates": "0.0.5",
-    "gulp-rename": "^1.2.0",
-    "gulp-tag-version": "^1.2.1",
-    "gulp-uglify": "^1.1.0"
+    "argv-set-env": "^1.0.0",
+    "babel-eslint": "^4.1.6",
+    "babel-loader": "5.3.2",
+    "babel-register": "^6.3.13",
+    "commitizen": "^2.4.6",
+    "cz-conventional-changelog": "^1.1.5",
+    "deep-extend": "0.4.0",
+    "deindent": "^0.1.0",
+    "eslint": "^1.10.3",
+    "eslint-config-defaults": "^7.1.1",
+    "eslint-loader": "^1.1.1",
+    "eslint-plugin-filenames": "^0.2.0",
+    "ghooks": "0.3.2",
+    "json-loader": "^0.5.4",
+    "lodash": "^3.10.1",
+    "lodash-node": "3.10.1",
+    "ng-annotate": "1.0.2",
+    "ng-annotate-loader": "0.0.10",
+    "node-libs-browser": "0.5.3",
+    "path-here": "^1.1.0",
+    "raw-loader": "0.5.1",
+    "semantic-release": "^4.3.5",
+    "validate-commit-msg": "1.0.0",
+    "webpack": "1.12.2",
+    "webpack-notifier": "^1.2.1"
   }
 }
