--- a/package.json
+++ b/package.json
@@ -34,10 +34,11 @@
     "build:prod": "webpack --progress --colors --set-env-NODE_ENV=production",
     "build": "npm run build:dev; npm run build:prod",
     "commit": "git-cz",
-    "test": "echo soon some tests ;)",
+    "test": "karma start --single-run --set-env-COVERAGE=true --set-env-NODE_ENV=test",
+    "test:watch": "karma start --set-env-COVERAGE=true --set-env-NODE_ENV=test",
+    "test:debug": "karma start --browsers Chrome --set-env-NODE_ENV=test",
     "prepublish": "npm run build",
     "postpublish": "",
-    "commit": "git-cz",
     "semantic-release": "semantic-release pre && npm publish && semantic-release post"
   },
   "description": "Angular-Formly plugin which outputs ionic compatible form fields.",
@@ -49,22 +50,29 @@
     "angular-messages": "^1.4.8"
   },
   "devDependencies": {
+    "angular-mocks": "^1.4.8",
     "argv-set-env": "^1.0.0",
     "babel-eslint": "^4.1.6",
     "babel-loader": "5.3.2",
     "babel-register": "^6.3.13",
     "commitizen": "^2.4.6",
     "cz-conventional-changelog": "^1.1.5",
-    "deep-extend": "0.4.0",
     "deindent": "^0.1.0",
     "eslint": "^1.10.3",
     "eslint-config-defaults": "^7.1.1",
     "eslint-loader": "^1.1.1",
     "eslint-plugin-filenames": "^0.2.0",
     "ghooks": "0.3.2",
+    "isparta-loader": "^2.0.0",
     "json-loader": "^0.5.4",
+    "karma": "^0.13.15",
+    "karma-chrome-launcher": "^0.2.2",
+    "karma-coverage": "^0.5.3",
+    "karma-firefox-launcher": "^0.1.7",
+    "karma-jasmine": "^0.3.6",
+    "karma-phantomjs-launcher": "^0.2.1",
+    "karma-webpack": "^1.7.0",
     "lodash": "^3.10.1",
-    "lodash-node": "3.10.1",
     "ng-annotate": "1.0.2",
     "ng-annotate-loader": "0.0.10",
     "node-libs-browser": "0.5.3",
