--- a/package.json
+++ b/package.json
@@ -46,8 +46,7 @@
     "angular": "^1.2.x || >= 1.4.0-beta.0 || >= 1.5.0-beta.0",
     "angular-formly": ">=6.20.0",
     "api-check": ">=7.5.0",
-    "ionic-sdk": "^1.2.0",
-    "angular-messages": "^1.4.8"
+    "ionic-sdk": "^1.2.0"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.8",
